--- a/src/App.scss
+++ b/src/App.scss
@@ -4,5 +4,18 @@
     box-sizing: border-box;
 }
 body{
-    margin: 0 10vw;
+    font-family: sans-serif;
+}
+.App{
+    .footer{
+        text-align: center;
+        padding: 1rem;
+        color: #fff;
+        text-transform: uppercase;
+        font-size: 14px;
+        background: rgb(15, 15, 15);
+    }
+    .container{
+        margin: 0 10vw;
+    }
 }
