--- a/src/components/HeaderBody.scss
+++ b/src/components/HeaderBody.scss
@@ -1,4 +1,4 @@
-@import '../variables.scss';
+// @import '../variables.scss';
 
 .HeaderBody{
     margin-top: 12vh;
@@ -46,7 +46,7 @@
             
         }
     }
-    @media (max-width: $bp-sm){
+    @media (max-width: 768px){
         flex-direction: column;
         .img-section{
             img{
