--- a/src/components/Card.scss
+++ b/src/components/Card.scss
@@ -13,58 +13,54 @@
     text-align: center;
     transition: transform 0.8s;
     transform-style: preserve-3d;
-    .flip-card-front, .flip-card-back {
-        position: absolute;
+    .flip-card-front,
+    .flip-card-back {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      -webkit-backface-visibility: hidden; /* Safari */
+      backface-visibility: hidden;
+    }
+    .flip-card-front {
+      background-color: #bbb;
+      color: black;
+      img {
         width: 100%;
         height: 100%;
-        -webkit-backface-visibility: hidden; /* Safari */
-        backface-visibility: hidden;
+        object-fit: cover;
+        overflow: hidden;
       }
-      .flip-card-front {
-        background-color: #bbb;
-        color: black;
-        img{
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            overflow: hidden;
-        }
-
+    }
+    .flip-card-back {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      padding: 0 10px;
+      align-items: center;
+      background-color: dodgerblue;
+      color: white;
+      transform: rotateY(180deg);
+      h1 {
+        font-size: 2rem;
       }
-      .flip-card-back {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        padding: 0 10px;
-        align-items: center;
-        background-color: dodgerblue;
-        color: white;
-        transform: rotateY(180deg);
-        h1{
-          font-size: 34px;
-        }
-        p{
-          font-size: 14px;
-          text-transform: uppercase;
-        }
-        a{
-          color: green;
-          text-decoration: none;
-          text-transform: uppercase;
-          background: #000;
-          padding: 12px 20px;
-          margin: 5px;
-          font-size: 14px;
-          border-radius: 8px;
-        }
+      p {
+        font-size: 14px;
+        text-transform: uppercase;
       }
+      a {
+        color: green;
+        text-decoration: none;
+        text-transform: uppercase;
+        background: #000;
+        padding: 12px 20px;
+        margin: 5px;
+        font-size: 14px;
+        border-radius: 8px;
+      }
+    }
   }
 }
 
-.flip-card:hover .flip-card-inner{
-    transform: rotateY(180deg);
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
 }
-
-
-
-
