--- a/src/components/Cards.scss
+++ b/src/components/Cards.scss
@@ -1,6 +1,9 @@
 .cards{
     display: grid;
     justify-content: center;
-    grid-gap: 10px;
-    grid-template-columns: repeat(2,300px);
-}   
+    grid-template-columns:repeat(1,300px);
+    grid-gap: 2rem;
+    @media(min-width:768px){
+        grid-template-columns: repeat(2,300px);
+    }
+}
