--- a/src/components/Nav.scss
+++ b/src/components/Nav.scss
@@ -1,73 +1,199 @@
-// @import '../variables.scss';
-.nav-wrapper{
-    position: fixed;
-    top: 0;
-    width: 80%;
-    nav{
-      
+// // .nav-wrapper {
+// //     z-index: 10000;
+// //     position: fixed;
+// //     top: 0;
+// //     width: 80%;
+// //     nav {
+// //         display: flex;
+// //         justify-content: space-between;
+// //         align-items: center;
+// //         height: 10vh;
+// //         #logo {
+// //             font-size: 24px;
+// //         }
+// //         .hamburger_btn {
+// //             cursor: pointer;
+// //             position: absolute;
+// //             margin: 7px;
+// //             right: 2%;
+// //             display: none;
+// //             .bar {
+// //                 width: 35px;
+// //                 height: 5px;
+// //                 background: #333;
+// //                 margin: 2px 0;
+// //                 transition: 0.4s;
+// //             }
+// //             .change1 {
+// //                 transform: rotate(-45deg) translate(-7px, 7px);
+// //             }
+// //             .change2 {
+// //                 opacity: 0;
+// //             }
+// //             .change3 {
+// //                 transform: rotate(45deg) translate(-5px, -7px);
+// //             }
+// //         }
+
+// //         .nav-links {
+// //             display: flex;
+// //             font-weight: 300;
+// //             a {
+// //                 margin: 0 1rem;
+// //             }
+// //         }
+// //         @media (max-width: 768px) {
+// //             justify-content: center;
+// //             .hamburger_btn {
+// //                 display: flex;
+// //                 flex-direction: column;
+// //             }
+// //             .nav-links {
+// //                 display: none;
+// //             }
+// //         }
+// //     }
+// // }
+// nav {
+//     .wrapper {
+//         display: flex;
+//         align-items: center;
+//         justify-content: space-between;
+//         #logo {
+//             color: #fff;
+//             margin: 2rem 0;
+//         }
+//         .nav-links {
+//             position: fixed;
+//             top: 0;
+//             opacity: 0;
+//             width: 80%;
+//             height: 100vh;
+
+//             transform: translateX(100%);
+//             display: flex;
+//             justify-content: center;
+//             align-items: center;
+//             flex-direction: column;
+//             a {
+//                 margin: 2rem 0;
+//             }
+//         }
+//         .active {
+//             transform: translateX(30%);
+//             opacity: 1;
+//             transition: transform 0.5s ease;
+//         }
+//     }
+//     .btn {
+//         position: absolute;
+//         z-index: 10000;
+//     }
+//     @media (min-width: 900px) {
+//         .wrapper {
+//             .nav-links {
+//                 position: relative;
+//                 width: auto;
+//                 height: auto;
+//                 opacity: 1;
+//                 transform: translateX(0);
+//                 flex-direction: row;
+//                 a {
+//                     margin: 0;
+//                     margin: 0 1rem;
+//                 }
+//             }
+//         }
+//     }
+// }
+
+nav {
+    position: relative;
+    .wrapper {
         display: flex;
         justify-content: space-between;
         align-items: center;
-        height: 10vh;
-        
-        .logo{
-            text-decoration: none;
-             color: #000;
-             text-transform: uppercase;
-             font-family: 'Raleway', sans-serif;
-             font-weight: 400;
-             font-size: 20px;
-             
-        }
-        .hamburger_btn{
-         cursor: pointer;
-         position: absolute;
-         margin: 7px;
-         right: 2%;
-         display: none;
-         .bar{
-             width: 35px;
-             height: 5px;
-             background: #333;
-             margin: 2px 0;
-             transition: .4s;
-         }
-         .change1{
-             transform: rotate(-45deg) translate(-7px, 7px);
-         }
-         .change2{
-             opacity: 0;
-         }
-         .change3{
-             transform: rotate(45deg) translate(-5px, -7px);
-         }
-         
-     }
-     
-     ul{
-            display: flex;
-         a{
-             text-decoration: none;
-             color: #000;
-             margin: 16px;
 
-             font-size: 12px;
-             font-family: 'Montserrat', sans-serif;
-            text-transform: uppercase;
+        // logo
+        #logo {
+            margin: 2rem 0;
+        }
+
+        // hamburger-toggle
+
+        .toggler-btn {
+            position: fixed;
+            right: 5%;
+            z-index: 10000;
+            @media screen and(min-width:900px) {
+                right: 10%;
             }
-     }
-     @media(max-width:768px){
-         justify-content: center;
-         .hamburger_btn{
+        }
+        // nav-links
+        .nav-links {
+            opacity: 0;
+            position: fixed;
+            z-index: 100;
+            right: 0;
+
+            top: 0;
+            height: 100%;
+            width: 50%;
             display: flex;
             flex-direction: column;
-         }
-         ul{
-             display: none;
-         }
-     }
+            justify-content: center;
+
+            background: #2d2d2d;
+            transform: translateX(100%);
+
+            a {
+                margin: 2rem 0;
+                color: #fff;
+            }
+        }
+        .active {
+            opacity: 1;
+            transform: translateX(0);
+            transition: transform 0.5s ease;
+            a {
+                margin-left: 30%;
+                font-size: 2rem;
+                &:hover {
+                    transform: scale(1.1);
+                    transition: transform 0.1s ease;
+                    color: coral;
+                }
+            }
+        }
+    }
+    @media screen and (min-width: 900px) {
+        .wrapper {
+            .nav-links {
+                position: relative;
+                flex-direction: row;
+                height: auto;
+                width: auto;
+                opacity: 1;
+                transform: translateX(0);
+                background: transparent;
+
+                a {
+                    color: #000;
+                    font-size: 16px;
+                    margin: 0 1rem;
+                    &:last-of-type {
+                        margin-right: 0;
+                    }
+                    &:hover {
+                        transform: scale(1.1);
+                        transition: transform 0.1s ease;
+                        color: coral;
+                    }
+                }
+            }
+            .toggler-btn {
+                display: none;
+            }
+        }
     }
 }
-
-
-
