--- a/src/pages/About.scss
+++ b/src/pages/About.scss
@@ -1,36 +1,57 @@
 @import url('https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap');
 .about{
     display: flex;
+    flex-direction: column;
     justify-content: center;
-    align-items: center;
-    font-family: sans-serif;
-    .right{
-        h2{
-            font-size: 40px;
-            text-transform: uppercase;
-            font-family: 'Alfa Slab One', cursive;
-           span{
-               color: #39439E;
+    min-height: 100vh;
+   .left{
+       margin-bottom: 2rem;
+       img{
+            max-width: 70vw;
+        
+        }
+   }
+   .right{
+       h2{
+
+           text-transform: uppercase;
+           margin-bottom: 2rem;
+       }
+       p{
+           margin-bottom: 1rem;
+       }
+    a{
+        display: inline-block;
+        text-decoration: none;
+        color: white;
+        background: #000;
+        padding: 10px 16px;
+        border-radius: 8px;
+    }
+   }
+   @media(min-width: 768px){
+       flex-direction: row;
+       align-items: center;
+       
+       .left{
+            img{
+                min-width: auto;
+                
+                margin-right: 3rem;
+                
+                
+            }
+       }
+       .right{
+           text-align: right;
+           h2{
+              text-align: right;
+               font-size: 3rem;
+               color: blueviolet;
            }
-        }
-        p
-        {
-            font-size: 22px;
-            font-weight: 400;
-            margin-top: 1rem;
-            margin-bottom: 3rem;
-        }
-        a{
-            text-decoration: none;
-            color: #fff;
-            background:#39439E;
-            text-transform: uppercase;
-            padding: 16px 20px;
-            font-size: 14px;
-            border-radius: 10px;
-        }
-    }
-    @media(max-width:768px){
-        flex-direction:column ;
-    }
+           p{
+               margin-left: 10vw;
+           }
+       }
+   }
 }
