--- a/src/pages/Contact.scss
+++ b/src/pages/Contact.scss
@@ -1,93 +1,86 @@
-.contact-section{
-  
-    font-family: sans-serif;
+
+
+.Contact{
+    min-height: 100vh;
+    padding-top: 10vh;
     .section-left{
-       min-height: 50vh;
-        color: white;
+        margin-bottom: 3rem;
         display: flex;
         flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        background-image:linear-gradient(to right,rgba(0,0,0,.5),rgba(0,0,0,.5)), url('https://images.unsplash.com/photo-1538391543564-047a76156421?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=401&q=80');
-        background-size:cover ;
-        background-repeat:no-repeat ;
-        h1{
-            text-transform: uppercase;
-            margin-bottom: 3rem;
-            
+        
+        div{
+            padding: 0;
+            display: flex;
+            align-items: flex-end;
+            justify-content: space-between;
+            margin-bottom: 2.5rem;
+            h1{
+                span{
+                    font-size: 2.3rem;
+                    color: #FB4F4F;
+                }
+                font-size: 1.5rem;
+                
+            }
+            img{
+                width: 64px;
+                height: 64px;
+            }
+           
         }
         ul{
-            display: flex;
-            width: 30%;
-            font-size: 1.5em;
-            justify-content: center;
-            align-items: center;            
+            margin-bottom:.5rem ;
             list-style: none;
+            display: grid;
+            grid-template-columns: repeat(3,50px);
             li a{
-                color: white;
-                margin-right:1rem;
+                color:#000;
             }
         }
+        
+     
     }
     .section-right{
-        min-height: 50vh;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        
         form{
-            position: relative;
-            min-height: 30vh;
-            width: 50%;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-evenly;
-            text-transform: capitalize;
-            color: rgba(0,0,0,.7);
-
-               input{
-                   margin-bottom: 1rem;
-                   border-left: none;
-                   border-right: none;
-                   border-top: none;
-                   border-bottom: .005rem solid rgba(0,0,0,.25) !important;
-                 
+            
+            p{
+                margin: 1rem 0;
+                display: flex;
+                flex-direction: column;
+                color: rgba(black,.7);
+                input,textarea{
+                    border: none;
+                    padding: .5rem;
+                    border-bottom: 1px solid rgba(black,.25);
                 }
-               textarea{
-                margin-bottom: 1rem;
+            }
+            button{
+                margin-top: 1rem;
+                border: none;
+                padding: 10px 15px;
+                color: white;
+                background: #FB4F4F;   
+                border-radius: 5px;
+                text-transform: uppercase;
+            }
 
-                     border-left: none;
-                    border-right: none;
-                    border-top: none;
-                    border-bottom: .005rem solid rgba(0,0,0,.25) !important;
-               }
-           
-           button{
-              font-weight: 300;
-                width: 75px;
-               padding: 5px 18px;
-               text-transform: uppercase;
-               color: #fff;
-               background: #3054D3;
-               border: none;
-               outline: none;
-               border-radius: 4px;
-           }
-           
         }
     }
-   p{
-       text-align: center;
-       padding: 1rem;
-   }
-   @media(min-width:768px){
-        display: grid;
-        grid-template-columns: repeat(2,1fr);
-        min-height: 100vh;
-        width: 100%;
-        
-        
-      
-    }
+    @media(min-width:768px){
+        display: flex;
+        align-items: center;
+        .section-left{
+            flex-grow: 1;
+            div{
+                justify-content: start;
+                h1{
+                    margin-right: 1rem;
+                }
+            }
+        }
+        .section-right{
+            flex-grow: 1;
 
+        }
+    }
 }
