--- a/src/components/Nav.scss
+++ b/src/components/Nav.scss
@@ -1,112 +1,3 @@
-// // .nav-wrapper {
-// //     z-index: 10000;
-// //     position: fixed;
-// //     top: 0;
-// //     width: 80%;
-// //     nav {
-// //         display: flex;
-// //         justify-content: space-between;
-// //         align-items: center;
-// //         height: 10vh;
-// //         #logo {
-// //             font-size: 24px;
-// //         }
-// //         .hamburger_btn {
-// //             cursor: pointer;
-// //             position: absolute;
-// //             margin: 7px;
-// //             right: 2%;
-// //             display: none;
-// //             .bar {
-// //                 width: 35px;
-// //                 height: 5px;
-// //                 background: #333;
-// //                 margin: 2px 0;
-// //                 transition: 0.4s;
-// //             }
-// //             .change1 {
-// //                 transform: rotate(-45deg) translate(-7px, 7px);
-// //             }
-// //             .change2 {
-// //                 opacity: 0;
-// //             }
-// //             .change3 {
-// //                 transform: rotate(45deg) translate(-5px, -7px);
-// //             }
-// //         }
-
-// //         .nav-links {
-// //             display: flex;
-// //             font-weight: 300;
-// //             a {
-// //                 margin: 0 1rem;
-// //             }
-// //         }
-// //         @media (max-width: 768px) {
-// //             justify-content: center;
-// //             .hamburger_btn {
-// //                 display: flex;
-// //                 flex-direction: column;
-// //             }
-// //             .nav-links {
-// //                 display: none;
-// //             }
-// //         }
-// //     }
-// // }
-// nav {
-//     .wrapper {
-//         display: flex;
-//         align-items: center;
-//         justify-content: space-between;
-//         #logo {
-//             color: #fff;
-//             margin: 2rem 0;
-//         }
-//         .nav-links {
-//             position: fixed;
-//             top: 0;
-//             opacity: 0;
-//             width: 80%;
-//             height: 100vh;
-
-//             transform: translateX(100%);
-//             display: flex;
-//             justify-content: center;
-//             align-items: center;
-//             flex-direction: column;
-//             a {
-//                 margin: 2rem 0;
-//             }
-//         }
-//         .active {
-//             transform: translateX(30%);
-//             opacity: 1;
-//             transition: transform 0.5s ease;
-//         }
-//     }
-//     .btn {
-//         position: absolute;
-//         z-index: 10000;
-//     }
-//     @media (min-width: 900px) {
-//         .wrapper {
-//             .nav-links {
-//                 position: relative;
-//                 width: auto;
-//                 height: auto;
-//                 opacity: 1;
-//                 transform: translateX(0);
-//                 flex-direction: row;
-//                 a {
-//                     margin: 0;
-//                     margin: 0 1rem;
-//                 }
-//             }
-//         }
-//     }
-// }
-
 nav {
     position: relative;
     .wrapper {
@@ -121,14 +12,67 @@ nav {
 
         // hamburger-toggle
 
-        .toggler-btn {
-            position: fixed;
-            right: 5%;
-            z-index: 10000;
-            @media screen and(min-width:900px) {
-                right: 10%;
+        .menu-link-wrapper {
+            position: relative;
+            z-index: 20000000;
+            width: 65px;
+            height: 45px;
+            cursor: pointer;
+            margin: 0;
+            .menu-link {
+                width: 100%;
+                height: 100%;
+                .lines {
+                    display: block;
+                    width: 100%;
+                    height: 2px;
+                    background: coral;
+                    transform-origin: 50% 50%;
+                    width: 60%;
+                    margin: 0 20%;
+                    position: relative;
+                    background: coral;
+                    top: 22px;
+                    &::before,
+                    &::after {
+                        display: block;
+                        width: 100%;
+                        height: 2px;
+                        background: coral;
+                        transform-origin: 50% 50%;
+                        position: absolute;
+                        left: 0;
+                        content: "";
+                        background: coral;
+                        transition: transform 0.2s ease 0s, width 0.2s ease 0.2s, top 0.2s ease 0.4s;
+                        transform-origin: 0 50%;
+                    }
+                    &::before {
+                        top: -10px;
+                    }
+                    &::after {
+                        top: 10px;
+                    }
+                }
+            }
+            .menu-trigger-open {
+                .lines {
+                    &::before,
+                    &::after {
+                        transition: top 0.2s ease 0s, width 0.2s ease 0.2s, transform 0.2s ease 0.4s;
+                        top: 0;
+                        width: 50%;
+                    }
+                    &::before {
+                        transform: rotate3d(0, 0, 1, 45deg);
+                    }
+                    &::after {
+                        transform: rotate3d(0, 0, 1, -45deg);
+                    }
+                }
             }
         }
+
         // nav-links
         .nav-links {
             opacity: 0;
@@ -191,7 +135,7 @@ nav {
                     }
                 }
             }
-            .toggler-btn {
+            .menu-link-wrapper {
                 display: none;
             }
         }
