--- a/src/components/Nav.scss
+++ b/src/components/Nav.scss
@@ -75,24 +75,28 @@ nav {
 
         // nav-links
         .nav-links {
-            opacity: 0;
+            opacity: 1;
             position: fixed;
             z-index: 100;
             right: 0;
 
             top: 0;
             height: 100%;
-            width: 50%;
+            width: 70%;
             display: flex;
             flex-direction: column;
             justify-content: center;
 
             background: #2d2d2d;
             transform: translateX(100%);
-
+            transition: transform 0.5s ease;
             a {
                 margin: 2rem 0;
+                font-size: 2rem;
+
                 color: #fff;
+                transform: translateX(100%);
+                transform: transform 0.2s ease;
             }
         }
         .active {
@@ -100,8 +104,10 @@ nav {
             transform: translateX(0);
             transition: transform 0.5s ease;
             a {
-                margin-left: 30%;
+                margin-left: 15%;
                 font-size: 2rem;
+                transform: translateX(0);
+                transform: transform 0.3s ease;
                 &:hover {
                     transform: scale(1.1);
                     transition: transform 0.1s ease;
