--- a/src/components/Nav.scss
+++ b/src/components/Nav.scss
@@ -111,6 +111,7 @@ nav {
                 opacity: 1;
                 &:hover {
                     transform: scale(1.1);
+                    transform-origin: left;
                     transition: transform 0.1s ease;
                     color: coral;
                 }
