--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,6 +10,10 @@
 html {
   font-size: 16px;
   font-family: $font-body;
+
+  @media screen and (max-width: 1400px) {
+    font-size: 0.9rem;
+  }
 }
 
 // container
@@ -34,4 +38,26 @@ a {
   font-family: $font-logo;
   font-weight: 700;
   font-size: $logo-size;
+}
+
+.title {
+  font-size: 2rem;
+  font-weight: 600;
+  padding: 1rem 0;
+}
+
+.card-title {
+  font-size: 1.5rem;
+  font-weight: 600;
+  opacity: 0.9;
+  padding: 0.5rem 0;
+}
+
+.cta {
+  font-size: 1rem;
+  background: #000;
+  color: #fff;
+
+  padding: 0.7rem 1.3rem;
+  border-radius: 0.5rem;
 }
