--- a/src/components/Cards.scss
+++ b/src/components/Cards.scss
@@ -1,17 +1,6 @@
-// .cards{
-//     display: grid;
-//     justify-content: center;
-//     grid-template-columns:repeat(1,300px);
-//     grid-gap: 2rem;
-//     @media(min-width:768px){
-//         grid-template-columns: repeat(2,300px);
-//     }
-// }
 .cards {
     display: flex;
-    flex-direction: column;
     flex-wrap: wrap;
-    @media screen and (min-width: 768px) {
-        flex-direction: row;
-    }
+    flex-wrap: wrap;
+    gap: 10px;
 }
