--- a/src/pages/Portfolio.scss
+++ b/src/pages/Portfolio.scss
@@ -1,10 +1,12 @@
-.Portfolio{
+.portfolio {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    h1{
-        text-align: center;
+
+    padding: 15vh 0;
+    .title {
+        text-align: left;
         margin-bottom: 1rem;
-     }
-   
+        text-transform: capitalize;
+    }
 }
