added contact form

--- a/src/pages/About.scss
+++ b/src/pages/About.scss
@@ -1,57 +1,21 @@
-@import url('https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap');
-.about{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+.about {
     min-height: 100vh;
-   .left{
-       margin-bottom: 2rem;
-       img{
-            max-width: 70vw;
-        
-        }
-   }
-   .right{
-       h2{
-
-           text-transform: uppercase;
-           margin-bottom: 2rem;
-       }
-       p{
-           margin-bottom: 1rem;
-       }
-    a{
-        display: inline-block;
-        text-decoration: none;
-        color: white;
-        background: #000;
-        padding: 10px 16px;
-        border-radius: 8px;
+    padding-top: 15vh;
+    .title {
+        text-transform: capitalize;
+        font-size: 5rem;
     }
-   }
-   @media(min-width: 768px){
-       flex-direction: row;
-       align-items: center;
-       
-       .left{
-            img{
-                min-width: auto;
-                
-                margin-right: 3rem;
-                
-                
+    .about-section {
+        display: flex;
+        flex-wrap: wrap;
+        height: 50vh;
+        .box {
+            flex: 1 1 300px;
+        }
+        .img-section {
+            img {
+                height: 300px;
             }
-       }
-       .right{
-           text-align: right;
-           h2{
-              text-align: right;
-               font-size: 3rem;
-               color: blueviolet;
-           }
-           p{
-               margin-left: 10vw;
-           }
-       }
-   }
+        }
+    }
 }
