--- a/src/pages/Contact.scss
+++ b/src/pages/Contact.scss
@@ -1,86 +1,103 @@
+$bg-color: #dc2f02;
 
-
-.Contact{
+.contact {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    padding-top: 15vh;
     min-height: 100vh;
-    padding-top: 10vh;
-    .section-left{
-        margin-bottom: 3rem;
-        display: flex;
-        flex-direction: column;
-        
-        div{
+    .box {
+        flex: 1 1 300px;
+    }
+    .section-left {
+        .title {
+            font-size: 5rem;
+            margin: 0;
             padding: 0;
+        }
+    }
+    .section-right {
+        form {
+            position: relative;
             display: flex;
-            align-items: flex-end;
-            justify-content: space-between;
-            margin-bottom: 2.5rem;
-            h1{
-                span{
-                    font-size: 2.3rem;
-                    color: #FB4F4F;
-                }
-                font-size: 1.5rem;
-                
-            }
-            img{
-                width: 64px;
-                height: 64px;
-            }
-           
-        }
-        ul{
-            margin-bottom:.5rem ;
-            list-style: none;
-            display: grid;
-            grid-template-columns: repeat(3,50px);
-            li a{
-                color:#000;
-            }
-        }
-        
-     
-    }
-    .section-right{
-        form{
-            
-            p{
-                margin: 1rem 0;
-                display: flex;
-                flex-direction: column;
-                color: rgba(black,.7);
-                input,textarea{
-                    border: none;
-                    padding: .5rem;
-                    border-bottom: 1px solid rgba(black,.25);
-                }
-            }
-            button{
-                margin-top: 1rem;
-                border: none;
-                padding: 10px 15px;
-                color: white;
-                background: #FB4F4F;   
-                border-radius: 5px;
+            flex-direction: column;
+            gap: 40px;
+            color: #fff;
+            // border-radius: 15px;
+            width: 350px;
+            background: $bg-color;
+            padding: 3em;
+            // padding-bottom: 10vh;
+            padding-bottom: 1.5em;
+            font-size: 16px;
+            box-shadow: 0 4px 4px rgba(black, 0.5);
+            .heading {
+                text-align: center;
                 text-transform: uppercase;
+                padding-bottom: 2rem;
             }
+            .btn {
+                // position: absolute;
+                // // bottom: -70px;
+                // bottom: 5vh;
+                display: inline-block;
+                border: none;
+                outline: none;
+                padding: 10px 25px;
+                font-size: 1rem;
+                background: #d00000;
+                color: #fff;
+                text-transform: uppercase;
+                border-radius: 25px;
+            }
+            .form-grp {
+                position: relative;
+                text-transform: capitalize;
+                input:-webkit-autofill,
+                input:-webkit-autofill:hover,
+                input:-webkit-autofill:focus,
+                textarea:-webkit-autofill,
+                textarea:-webkit-autofill:hover,
+                textarea:-webkit-autofill:focus {
+                    -webkit-text-fill-color: #000;
+                    -webkit-box-shadow: 0 0 0px 1000px $bg-color inset;
+                    transition: background-color 5000s ease-in-out 0s;
+                }
+                input,
+                textarea {
+                    width: 100%;
+                    outline: none;
+                    font-size: 16px;
+                    background: $bg-color;
+                    border: none;
+                    border-bottom: 1px solid rgba(white, 0.7);
+                    padding: 0.5rem 0;
+                }
+                input:focus + label,
+                input:valid + label,
+                textarea:focus + label,
+                textarea:valid + label {
+                    transform: translateY(-75%);
+                    transition: 0.5s ease;
+                    opacity: 1;
+                }
+                input:focus,
+                input:valid,
+                textarea:focus,
+                textarea:valid {
+                    border-bottom: 1px solid rgba(white, 1);
+                }
+                label {
+                    position: absolute;
+                    pointer-events: none;
+                    left: 0px;
+                    top: -3px;
+                    text-transform: capitalize;
 
-        }
-    }
-    @media(min-width:768px){
-        display: flex;
-        align-items: center;
-        .section-left{
-            flex-grow: 1;
-            div{
-                justify-content: start;
-                h1{
-                    margin-right: 1rem;
+                    opacity: 0.7;
+                    padding: 0.5rem 0;
                 }
             }
-        }
-        .section-right{
-            flex-grow: 1;
-
         }
     }
 }
