--- a/src/pages/Contact.scss
+++ b/src/pages/Contact.scss
@@ -1,36 +1,45 @@
-$bg-color: #dc2f02;
+$bg-color: #000;
+$text-color: #fff;
 
 .contact {
+    @media (max-width: 768px) {
+        padding-top: 15vh;
+    }
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-    padding-top: 15vh;
     min-height: 100vh;
     .box {
         flex: 1 1 300px;
     }
     .section-left {
+        @media (max-width: 768px) {
+            margin-bottom: 15vh;
+        }
         .title {
             font-size: 5rem;
             margin: 0;
             padding: 0;
+            color: $text-color;
         }
     }
     .section-right {
+        @media (max-width: 768px) {
+            margin-bottom: 15vh;
+        }
         form {
             position: relative;
             display: flex;
             flex-direction: column;
             gap: 40px;
-            color: #fff;
+            color: $text-color;
             // border-radius: 15px;
-            width: 350px;
+
             background: $bg-color;
-            padding: 3em;
             // padding-bottom: 10vh;
             padding-bottom: 1.5em;
             font-size: 16px;
-            box-shadow: 0 4px 4px rgba(black, 0.5);
+            // box-shadow: 0 4px 4px rgba(black, 0.5);
             .heading {
                 text-align: center;
                 text-transform: uppercase;
@@ -40,13 +49,13 @@ $bg-color: #dc2f02;
                 // position: absolute;
                 // // bottom: -70px;
                 // bottom: 5vh;
-                display: inline-block;
+                cursor: pointer;
                 border: none;
                 outline: none;
                 padding: 10px 25px;
                 font-size: 1rem;
-                background: #d00000;
-                color: #fff;
+                background: orangered;
+                color: $text-color;
                 text-transform: uppercase;
                 border-radius: 25px;
             }
@@ -59,7 +68,7 @@ $bg-color: #dc2f02;
                 textarea:-webkit-autofill,
                 textarea:-webkit-autofill:hover,
                 textarea:-webkit-autofill:focus {
-                    -webkit-text-fill-color: #000;
+                    -webkit-text-fill-color: $text-color;
                     -webkit-box-shadow: 0 0 0px 1000px $bg-color inset;
                     transition: background-color 5000s ease-in-out 0s;
                 }
@@ -69,6 +78,7 @@ $bg-color: #dc2f02;
                     outline: none;
                     font-size: 16px;
                     background: $bg-color;
+                    color: $text-color;
                     border: none;
                     border-bottom: 1px solid rgba(white, 0.7);
                     padding: 0.5rem 0;
@@ -79,6 +89,7 @@ $bg-color: #dc2f02;
                 textarea:valid + label {
                     transform: translateY(-75%);
                     transition: 0.5s ease;
+                    color: rgb(37, 89, 185);
                     opacity: 1;
                 }
                 input:focus,
