--- a/src/components/Footer.scss
+++ b/src/components/Footer.scss
@@ -1,15 +1,23 @@
-.social-links {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: pink;
-    width: 100%;
-    a {
-        margin: 0 1rem;
-        padding: 1.5rem 0;
-        img {
-            width: 25px;
-            height: 25px;
+footer {
+    .social-links {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        width: 100%;
+        a {
+            margin: 0 1rem;
+            padding: 1.5rem 0;
+            color: blanchedalmond;
+            i {
+                font-size: 1.5rem;
+            }
         }
+    }
+    p {
+        color: blanchedalmond;
+        text-transform: uppercase;
+        text-align: center;
+        padding: 1rem;
     }
 }
