--- a/src/pages/About.scss
+++ b/src/pages/About.scss
@@ -1,11 +1,15 @@
+$text-color: #fff;
+
 .about {
     min-height: 100vh;
     padding-top: 15vh;
     .title {
         text-transform: capitalize;
         font-size: 5rem;
+        color: $text-color;
     }
     .about-section {
+        color: $text-color;
         display: flex;
         flex-wrap: wrap;
         height: 50vh;
