--- a/src/pages/Contact.scss
+++ b/src/pages/Contact.scss
@@ -35,7 +35,6 @@ $text-color: #fff;
             color: $text-color;
             // border-radius: 15px;
 
-            background: $bg-color;
             // padding-bottom: 10vh;
             padding-bottom: 1.5em;
             font-size: 16px;
@@ -69,7 +68,7 @@ $text-color: #fff;
                 textarea:-webkit-autofill:hover,
                 textarea:-webkit-autofill:focus {
                     -webkit-text-fill-color: $text-color;
-                    -webkit-box-shadow: 0 0 0px 1000px $bg-color inset;
+                    -webkit-box-shadow: 0 0 0px 1000px #080808 inset;
                     transition: background-color 5000s ease-in-out 0s;
                 }
                 input,
@@ -77,7 +76,7 @@ $text-color: #fff;
                     width: 100%;
                     outline: none;
                     font-size: 16px;
-                    background: $bg-color;
+                    background: transparent;
                     color: $text-color;
                     border: none;
                     border-bottom: 1px solid rgba(white, 0.7);
