--- a/src/pages/Portfolio.scss
+++ b/src/pages/Portfolio.scss
@@ -1,3 +1,4 @@
+$text-color: #fff;
 .portfolio {
     display: flex;
     flex-direction: column;
@@ -5,6 +6,7 @@
 
     padding: 15vh 0;
     .title {
+        color: $text-color;
         text-align: left;
         margin-bottom: 1rem;
         text-transform: capitalize;
