--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,6 @@
+@import "./colors.scss";
 @import "./fonts";
+
 * {
   margin: 0;
   padding: 0;
@@ -29,7 +31,6 @@ html {
 
 a {
   text-decoration: none;
-  color: #000;
 }
 
 // setting the logo font-family
@@ -54,14 +55,13 @@ a {
 }
 
 body {
-  background: #000;
+  background: $bg-color;
 }
 
 .cta {
   font-size: 1rem;
-  background: #000;
-  color: #fff;
-
+  background: $accent-color;
+  color: #000;
   padding: 0.7rem 1.3rem;
   border-radius: 0.5rem;
 }
