--- a/src/_fonts.scss
+++ b/src/_fonts.scss
@@ -2,9 +2,10 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Poppins:wght@400;600&display=swap");
 
+@import url("https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap");
 // font-families
 
-$font-logo: "Comfortaa", cursive;
+$font-logo: "Abril Fatface", cursive;
 $font-body: "Poppins", sans-serif;
 
 $logo-size: 24px;
