--- a/src/pages/Contact.scss
+++ b/src/pages/Contact.scss
@@ -2,6 +2,7 @@ $bg-color: #000;
 $text-color: #fff;
 
 .contact {
+    position: relative;
     @media (max-width: 768px) {
         padding-top: 15vh;
     }
