--- a/src/pages/HeroSection.scss
+++ b/src/pages/HeroSection.scss
@@ -6,29 +6,36 @@ $text-color: #fff;
     min-height: 100vh;
     align-items: center;
     .box {
-        flex: 1 1 450px;
+        flex: 1 1 400px;
     }
     .box-1 {
+        // background: pink;
         color: $text-color;
         opacity: 1;
         transition: transform 0.5s;
         transform: translateX(0);
+        @media screen and (min-width: 768px) {
+            text-align: center;
+        }
         h2 {
             font-size: 3rem;
+            font-weight: bold;
         }
         .subtitle {
             font-size: 2.5rem;
+            text-transform: capitalize;
+            .profile {
+                text-transform: uppercase;
+                font-weight: 700;
+                color: red;
+            }
         }
         .text {
-            font-size: 1.5rem;
-            margin-bottom: 1.5rem;
-        }
-        .cta {
-            position: absolute;
-            &:hover {
-                transform: translate(2px, 2px);
-                transition: transform 0.5s;
-            }
+            font-size: 1.3rem;
+            margin-bottom: 3rem;
+            font-weight: 400;
+            opacity: 0.7;
+            text-transform: capitalize;
         }
     }
     .outView {
@@ -38,5 +45,12 @@ $text-color: #fff;
     }
     .box-2 {
         display: none;
+
+        @media screen and (min-width: 768px) {
+            display: block;
+            img {
+                width: 480px;
+            }
+        }
     }
 }
