--- a/src/styles.scss
+++ b/src/styles.scss
@@ -37,13 +37,17 @@ a {
 
 #logo {
   font-family: $font-logo;
-  font-weight: 700;
+
   font-size: $logo-size;
+  text-transform: uppercase;
+  letter-spacing: 0.25rem;
 }
 
-.title {
-  font-size: 2rem;
-  font-weight: 600;
+.section-title {
+  font-size: 5rem;
+  font-weight: 700;
+  text-transform: capitalize;
+  color: #fff;
   padding: 1rem 0;
 }
 
@@ -63,5 +67,5 @@ body {
   background: $accent-color;
   color: #000;
   padding: 0.7rem 1.3rem;
-  border-radius: 0.5rem;
+  border-radius: 20px;
 }
