--- a/src/pages/HeroSection.scss
+++ b/src/pages/HeroSection.scss
@@ -17,25 +17,27 @@ $text-color: #fff;
         @media screen and (min-width: 768px) {
             text-align: center;
         }
-        h2 {
-            font-size: 3rem;
-            font-weight: bold;
+        .name {
+            text-transform: uppercase;
+            font-size: 48px;
+            letter-spacing: 0.25rem;
+            font-weight: 400;
+            margin-bottom: 1rem;
         }
         .subtitle {
-            font-size: 2.5rem;
-            text-transform: capitalize;
-            .profile {
-                text-transform: uppercase;
-                font-weight: 700;
-                color: red;
-            }
-        }
-        .text {
-            font-size: 1.3rem;
-            margin-bottom: 3rem;
-            font-weight: 400;
+            font-size: 18px;
+            letter-spacing: 0.5rem;
             opacity: 0.7;
-            text-transform: capitalize;
+            font-weight: 400;
+        }
+        .cta {
+            margin-top: 1.5rem;
+            display: inline-block;
+            font-size: 20px;
+            padding: 0.75rem 1.3rem;
+            color: #000;
+            background: #fff;
+            border-radius: 25px;
         }
     }
     .outView {
