--- a/src/styles.scss
+++ b/src/styles.scss
@@ -60,12 +60,5 @@ a {
 
 body {
   background: $bg-color;
-}
-
-.cta {
-  font-size: 1rem;
-  background: $accent-color;
-  color: #000;
-  padding: 0.7rem 1.3rem;
-  border-radius: 20px;
+  cursor: none;
 }
