--- a/src/_fonts.scss
+++ b/src/_fonts.scss
@@ -4,6 +4,7 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap");
 // font-families
+@import url("https://fonts.googleapis.com/css2?family=Teko:wght@700&display=swap");
 
 $font-logo: "Abril Fatface", cursive;
 $font-body: "Poppins", sans-serif;
@@ -11,3 +12,5 @@ $font-body: "Poppins", sans-serif;
 $logo-size: 24px;
 $page-title: 5rem;
 $title: 2rem;
+
+$numbers: "Teko", sans-serif;
