--- a/src/components/Footer.scss
+++ b/src/components/Footer.scss
@@ -9,8 +9,12 @@ footer {
             margin: 0 1rem;
             padding: 1.5rem 0;
             color: blanchedalmond;
-            i {
-                font-size: 1.5rem;
+            .icons {
+                font-size: 28px;
+                opacity: 0.25;
+                &:hover {
+                    opacity: 1;
+                }
             }
         }
     }
