--- a/src/components/Nav.scss
+++ b/src/components/Nav.scss
@@ -5,7 +5,7 @@ nav {
     top: 0;
     left: 0;
     width: 100%;
-    z-index: 10000000000000000;
+    z-index: 1000;
     .wrapper {
         display: flex;
         justify-content: space-between;
