--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,6 +5,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  cursor: none;
 }
 
 // setting the base font size
@@ -12,7 +13,7 @@
 html {
   font-size: 16px;
   font-family: $font-body;
-
+  scroll-behavior: smooth;
   @media screen and (max-width: 1400px) {
     font-size: 0.9rem;
   }
@@ -60,5 +61,9 @@ a {
 
 body {
   background: $bg-color;
-  cursor: none;
+}
+
+.numbers {
+  font-family: $numbers;
+  color: #fff;
 }
