added resume link

--- a/src/pages/HeroSection.scss
+++ b/src/pages/HeroSection.scss
@@ -38,8 +38,12 @@ $text-color: #fff;
             font-size: 20px;
             padding: 0.75rem 1.3rem;
             color: #000;
-            background: #fff;
             border-radius: 25px;
+            background: rgba(255, 255, 255, 0.9);
+
+            &:hover {
+                background: rgba(255, 255, 255, 1);
+            }
         }
     }
     .outView {
