--- a/src/pages/About.scss
+++ b/src/pages/About.scss
@@ -30,6 +30,18 @@ $text-color: #fff;
         .text-section {
             width: 400px;
             font-size: 1.2rem;
+            .cta {
+                margin-top: 2rem;
+                font-size: 16px;
+                display: inline-block;
+                color: #000;
+                background: rgba(255, 255, 255, 0.9);
+                padding: 0.75rem 1rem;
+                border-radius: 25px;
+                &:hover {
+                    background: rgba(255, 255, 255, 1);
+                }
+            }
         }
     }
 }
