--- a/src/pages/Contact.scss
+++ b/src/pages/Contact.scss
@@ -53,6 +53,11 @@ $text-color: #fff;
                 border: none;
                 text-transform: uppercase;
                 border-radius: 20px;
+                background: rgba(255, 255, 255, 0.9);
+                padding: 0.75rem 1rem;
+                &:hover {
+                    background: rgba(255, 255, 255, 1);
+                }
             }
             .form-grp {
                 margin: 30px 0;
