form resets after clicking submit button

--- a/src/pages/Contact.scss
+++ b/src/pages/Contact.scss
@@ -79,6 +79,7 @@ $text-color: #fff;
                     // margin: 30px 0;
                     width: 400px;
                     outline: none;
+                    font-family: sans-serif;
                     font-size: 16px;
                     background: transparent;
                     color: $text-color;
