added form success message

--- a/src/pages/Contact.scss
+++ b/src/pages/Contact.scss
@@ -118,9 +118,10 @@ $text-color: #fff;
                 }
             }
         }
-        .messageBox {
-            font-size: 1.5rem;
-            padding: 1.5rem;
+        .successMessage {
+            font-size: 1.2rem;
+            padding: 0.5rem;
+            color: #fff;
         }
     }
 }
